[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents_library"
version = "0.1"
description = "A library of hardware components for energy estimation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Tanner Andrulis", email = "Andrulis@Mit.edu"}
]
keywords = ["hardware", "components", "energy", "estimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.setuptools]
packages = {find = {include = ["hwcomponents_library", "hwcomponents_library.*"]}}
include-package-data = true
