[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents_library"
dynamic = ["version"]
description = "A library of hardware components for energy estimation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Tanner Andrulis", email = "Andrulis@Mit.edu"}
]
keywords = ["hardware", "components", "energy", "estimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "hwcomponents",
    "hwcomponents-cacti",
]

[tool.setuptools]
packages = {find = {include = ["hwcomponents_library", "hwcomponents_library.*"]}}
include-package-data = true

[tool.setuptools_scm]
write_to = "hwcomponents_library/_version.py"
fallback_version = "1.0.0"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
